--- a/index.html
+++ b/index.html
@@ -741,6 +741,15 @@ I still closely collaborate with some of my former group members at Inria Paris:
 
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
+
+    <ul style="font-size: small">
+      <li><b>Recent:</b> <a href="http://hotspot.compute.dtu.dk/">6th Workshop on Hot Issues in Security Principles and Trust (HotSpot 2020)</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <a href="https://filesender.renater.fr/?s=download&token=f48de23c-de3b-4342-a8b2-039f9cb6fd0c">video</a> (2020-09-07)</li>
+      <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
+      <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
+    </ul>
+  </li>
+
   <li style="margin-bottom: 1ex;"><em>Formally Verified Security</em></a>
 
     <ul style="font-size: small">
@@ -766,14 +775,6 @@ I still closely collaborate with some of my former group members at Inria Paris:
 
     <ul style="font-size: small">
       <li><b>Recent:</b> Everest All Hands: <a href="talks/2019-10-10-Dijkstra-Monads-for-All-Everest-Paris.pdf">slides</a> (2019-10-10)</li>
-    </ul>
-  </li>
-  
-  <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
-
-    <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
-      <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
     </ul>
   </li>
 
