--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@ I still closely collaborate with some of my former group members at Inria Paris:
   <li style="margin-bottom: 1ex;"><em>Journey Beyond Full Abstraction:<br/>Exploring Robust Property Preservation for Secure Compilation</em></a>
 
     <ul style="font-size: small">
-      <li><b>Recent:</b> <a href="http://hotspot.compute.dtu.dk/">6th Workshop on Hot Issues in Security Principles and Trust (HotSpot 2020)</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <a href="https://filesender.renater.fr/?s=download&token=f48de23c-de3b-4342-a8b2-039f9cb6fd0c">video</a> (2020-09-07)</li>
+      <li><b>Recent:</b> <a href="http://hotspot.compute.dtu.dk/">Workshop on Hot Issues in Security Principles and Trust (HotSpot)</a>: <a href="talks/2020-09-07-Journey-Beyond-Full-Abstraction-HotSpot.pdf">slides</a> and <b><a href="https://filesender.renater.fr/?s=download&token=f48de23c-de3b-4342-a8b2-039f9cb6fd0c">video</a></b> (2020-09-07)</li>
       <li><a href="https://web.stevens.edu/csf2019/">32nd IEEE Computer Security Foundations Symposium (CSF)</a>: <a href="talks/2019-06-27-Journey-Beyond-Full-Abstraction-CSF.pdf">slides</a> (2019-06-27)</li>
       <li><a href="https://popl19.sigplan.org/track/prisc-2019">Workshop on Principles of Secure Compilation (PriSC @ POPL'19)</a>: <a href="talks/2019-01-13-Journey-Beyond-Full-Abstraction-PriSC.pdf">slides</a> (2019-01-13)</li>
     </ul>
