--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
 <p style="width:42em; text-align: left">
-<b>Tenured faculty member (W2) and head of the <a href="#group">Formally Verified Security</a> group</b><br/> at the
+<b>Tenured faculty member and head of the <a href="#group">Formally Verified Security</a> group</b><br/> at the
 <a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
 <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.
 </p>
@@ -128,7 +128,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;">
     On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b></br>
-    in Bochum, Germany as a Tenured Research Group Leader (W2).
+    in Bochum, Germany as a Tenured Faculty (W2).
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
