--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ MPRI website</a>.</p>
       secure hardware</li>
   </ul>
 
-<h2 id="group">Research Group</h2>
+<h2 id="group">Formally Verified Security Research Group</h2>
 
 I am very fortunate to work with a group of outstanding students and starting researchers<!-- , and engineers -->:
 
