--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
   <!-- <ul> -->
   <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
   <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
   <!-- </ul> -->
-  </li>
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://kenji.maillard.blue/">Kenji Maillard</a></b> has successfully defended his
@@ -883,8 +883,8 @@ IRISA, Rennes: <a href="talks/2018-02-05-Secure-Compilation-Rennes.pdf">slides</
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a></b> course at<br/><a href="http://cs.unibo.it/projects/biss2020/">BISS Summer School for first-year PhD students</a>, Bertinoro, Italy, <strike>8-13 March 2020</strike></a> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><b>Recent:</b> <b><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
   </li>
