--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p style="width:42em; text-align: left">
 <b>Tenured faculty member and head of the <a href="#group">Formally Verified Security</a> group</b><br/> at the
-<a href="https://mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
+<a href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
 <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.
 </p>
 
@@ -127,7 +127,7 @@ could contribute:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
-    On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://mpi-sp.org">MPI-SP</a>)</b></br>
+    On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br>
     in Bochum, Germany as a Tenured Faculty (W2).
   </li>
 
