--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@ could contribute:
   <!-- <\!-- </ul> -\-> -->
   <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>
-  <!-- <ul> -->
-  <!-- <\!-- <li>Application deadline: 30 June 2019</li> -\-> -->
-  <!-- <li>School: 24-31 August 2019 at INSA, Lyon, France</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a> course at <a href="http://www.mathinfoly.org">Summer School<br/> on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a> -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Application deadline: 30 June 2019</li> -\\-> -\-> -->
+  <!-- <\!-- <li>School: 24-31 August 2019 at INSA, Lyon, France</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>
-  <!-- <ul> -->
-  <!-- <\!-- <li>Application deadline: 17 May 2019</li> -\-> -->
-  <!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -->
-  <!-- </ul> -->
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"><a href="https://prosecco.gforge.inria.fr/personal/hritcu/teaching/vtsa2019/">Program Verification with F*</a> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a> -->
+  <!-- <\!-- <ul> -\-> -->
+  <!-- <\!-- <\\!-- <li>Application deadline: 17 May 2019</li> -\\-> -\-> -->
+  <!-- <\!-- <li>School: 1-5 July 2019 at University of Luxembourg</li> -\-> -->
+  <!-- <\!-- </ul> -\-> -->
+  <!-- </li> -->
 
   <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
     <a href="https://sympa.inria.fr/sympa/arc/epi-prosecco.seminars/2019-01/msg00001.html">Habilitation defense on Tuesday, 29 January 2019 at Inria Paris</a>
