--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ could contribute:
   </li>
 
   <li style="margin-bottom: 1ex;"><a href="https://popl19.sigplan.org">
-    Principles of Programming Languages, POPL 2019</a>
+    Principles of Programming Languages, POPL 2018 & 2019</a>
     (Artifact Evaluation Co-Chair)
   <!-- <ul> -->
   <!-- <li>Abstract deadline: 1 July 2017</li> -->
