--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ I am very fortunate to work with a group of outstanding students and starting re
   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/d/Durier:Adrien">Adrien Durier</a> (Postdoctoral Researcher, MPI-SP)</li>
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
 
-  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP, starting 1 October)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Engineer / Intern, MPI-SP)</li>
 
