--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ could contribute:
   <!-- <li>Abstract deadline: 16 September 2020</li> -->
   <!-- <li>Submission deadline: 22 September 2020</li> -->
   <!-- <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li> -->
-  <li>Conference: 18-19 January 2021<!-- , Copenhagen, Denmark --></li>
+  <li>Conference: 18-19 January 2021, Online</li>
   </ul>
   </li>
 
