--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
 </ul>
 
-I still closely collaborate with some of my former group members at Inria Paris:
+I still closely collaborate with some former members of my group at Inria Paris:
 
 <ul style="width:42em; text-align: left">
 
