--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 Between October 2013 and April 2020 I was a 
 tenured researcher (<a href="https://en.wikipedia.org/wiki/Academic_ranks_in_France#Research-only_positions">chargé de recherche</a>)<br/>
 at <a href="https://www.inria.fr/en/centre/paris">Inria Paris</a>
-in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a><!-- (now officially on leave; fr: "mise en disponibilité") -->.</p>
-
-<p style="width:42em; text-align: left">
-<!-- Between May 2011 and  -->
-Until September 2013 I was a Postdoctoral Research Associate at
+in the <a href="http://prosecco.gforge.inria.fr/">Prosecco team</a><!-- (now officially on leave; fr: "mise en disponibilité") -->.
+Between May 2011 and
+September 2013 I was a Postdoctoral Research Associate at
 the <a href="http://www.cis.upenn.edu/">University of Pennsylvania</a>,
 working <!--on the <a href="http://www.crash-safe.org/">CRASH/SAFE
 project</a>--> under the supervision
