--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Catalin Hritcu - Inria Paris</title>
+	<title>Catalin Hritcu - MPI-SP</title>
 </head>
 
 <body>
@@ -129,12 +129,12 @@ could contribute:
     in Bochum, Germany as a Tenured Faculty (W2).
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (Conference &amp; PC Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
   <ul>
   <!-- <li>Abstract deadline: 16 September 2020</li> -->
   <!-- <li>Submission deadline: 22 September 2020</li> -->
   <!-- <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li> -->
-  <li>Conference: 18-19 January 2021, Online</li>
+  <li>Conference: 17-19 January 2021, Online</li>
   </ul>
   </li>
 
