--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ could contribute:
   <b><a href="https://www.ieee-security.org/TC/SP2021/">Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
   <ul>
   <!-- <li><b>Submission deadlines(!): <strike>4 June 2020, 3 September 2020,</strike> 3 December 2020</b></li> -->
-  <li>Conference: 23-27 May 2021</li>
+  <li>Conference: 23-27 May 2021, Online</li>
   </ul>
   </li>
 
