--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
 <p style="width:42em; text-align: left">
-<b>Tenured faculty member and head of the <a href="#group">Formally Verified Security</a> group</b><br/> at the
+<b>Tenured faculty and head of the <a href="#group">Formally Verified Security group</a></b><br/> at the
 <a href="https://www.mpi-sp.org">Max Planck Institute for Security and Privacy (MPI-SP)</a> in
 <a href="https://en.wikipedia.org/wiki/Bochum">Bochum, Germany</a>.
 </p>
@@ -142,7 +142,7 @@ could contribute:
   <ul>
   <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li>
   <li>Conference (CSF 2020): June 2020, <!--strike>Boston, MA, USA</strike--> Online</li>
-  <li>Conference (CSF 2021): June 2021, Dubrovnik, Croatia</li>
+  <li>Conference (CSF 2021): June 2021, <!-- Dubrovnik, Croatia --> Online</li>
   </ul>
   </li>
 
