--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ could contribute:
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></b> (Co-Organizer)
+  <li style="margin-bottom: 1ex;"><b><strike><a href="http://www.dagstuhl.de/20201">Dagstuhl Seminar 20201 on Secure Compilation</a></strike><a href="http://www.dagstuhl.de/21481">Dagstuhl Seminar 21481 on Secure Compilation</a></b> (Co-Organizer)
   <ul>
   <li>Seminar: <strike>10-15 May, 2020</strike> 28 Nov - 3 Dec, 2021, Schloss Dagstuhl, Germany</li>
   </ul>
