--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
+  </li>
+
   <li style="margin-bottom: 1ex;">
     On 1 May 2020 I joined the new <b>Max Planck Institute for Security and Privacy (<a href="https://www.mpi-sp.org">MPI-SP</a>)</b></br>
     in Bochum, Germany as a Tenured Faculty (W2).
