--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ could contribute:
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a></b> (PC member)
   <ul>
-  <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li>
+  <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
   <li>Conference (CSF 2021): June 2021, <!-- Dubrovnik, Croatia --> Online</li>
   </ul>
