--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ could contribute:
   <ul>
   <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
-  <li>Conference (CSF 2021): June 2021, <!-- Dubrovnik, Croatia --> Online</li>
+  <li>Conference (CSF 2021): 22-25 June 2021, <!-- Dubrovnik, Croatia --> Online</li>
   </ul>
   </li>
 
