--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
 
   <li style="margin-bottom: 1ex;"><a href="https://dcc.fceia.unr.edu.ar/~erivas/">Exequiel Rivas</a> (Starting Researcher Position, Inria Paris)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://github.com/theolaurent">Théo Laurent</a> (Co-Supervised PhD Student, Inria Paris)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.theolaurent.fr">Théo Laurent</a> (Co-Supervised PhD Student, Inria Paris)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://antoinevanmuylder.github.io">Antoine Van Muylder</a> (Research Intern / Engineer, Inria Paris)</li>
 
