--- a/index.html
+++ b/index.html
@@ -547,6 +547,22 @@ I still closely collaborate with some former members of my group at Inria Paris:
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate, 
+    Philipp G. Haselwarter, 
+    Exequiel Rivas, 
+    Antoine Van Muylder, 
+    Théo Winterhalter, 
+    C&#259;t&#259;lin Hri&#539;cu,
+    Kenji Maillard, and
+    Bas Spitters.
+    <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
+    Cryptology ePrint Archive: Report 2021/397, 24 March 2021.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/SSProve/ssprove">Coq development</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Maximilian Algehed,
     Jean-Philippe Bernardy, and
     C&#259;t&#259;lin Hri&#539;cu.
