--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
     Kenji Maillard, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
-    Cryptology ePrint Archive: Report 2021/397, 24 March 2021.
+    Cryptology ePrint Archive: Report 2021/397, March 2021.
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove">Coq development</a>
     </ul>
