--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@ could contribute:
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a> for <a href="https://eprint.iacr.org/2021/397">SSProve</a></b>
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
   </li>
 
