--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@ could contribute:
     in Bochum, Germany as a Tenured Faculty (W2).
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
   <ul>
-  <!-- <li>Abstract deadline: 16 September 2020</li> -->
-  <!-- <li>Submission deadline: 22 September 2020</li> -->
-  <!-- <li>Conference: 20-21 January 2020, New Orleans, Louisiana, USA</li> -->
+  <li>Abstract deadline: 16 September 2021</li>
+  <li>Submission deadline: 22 September 2021</li>
+  <li>Conference: 16-18 January 2022, Philadelphia, Pennsylvania, USA</li>
   <!-- <li>Conference: 17-19 January 2021, Online</li> -->
   </ul>
   </li>
