--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ could contribute:
   <ul>
   <!-- <li><b>Submission deadlines(!): <strike>8 May 2020, 2 October 2020,</strike> and 8 February 2021</b></li> -->
   <!-- <li>Conference (CSF 2020): June 2020, <\!--strike>Boston, MA, USA</strike-\-> Online</li> -->
-  <li>Conference (CSF 2021): 22-25 June 2021, <!-- Dubrovnik, Croatia --> Online</li>
+  <!-- <li>Conference (CSF 2021): 22-25 June 2021, <\!-- Dubrovnik, Croatia -\-> Online</li> -->
   </ul>
   </li>
 
@@ -156,7 +156,7 @@ could contribute:
   <b><a href="https://www.ieee-security.org/TC/SP2021/">Symposium on Security and Privacy, Oakland S&amp;P 2021</a></b> (PC Member)
   <ul>
   <!-- <li><b>Submission deadlines(!): <strike>4 June 2020, 3 September 2020,</strike> 3 December 2020</b></li> -->
-  <li>Conference: 23-27 May 2021, Online</li>
+  <!-- <li>Conference: 23-27 May 2021, Online</li> -->
   </ul>
   </li>
 
