--- a/index.html
+++ b/index.html
@@ -559,9 +559,13 @@ I still closely collaborate with some former members of my group at Inria Paris:
     Kenji Maillard, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
-    Cryptology ePrint Archive: Report 2021/397, March 2021.
+    In <a href="https://web.stevens.edu/csf2019/index.html">34th
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 256--271. June 2021.
+    <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove">Coq development</a>
+      <li><a href="https://youtu.be/MlwQ7CfNH5Q">presentation video</a>
+      <li><a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>
     </ul>
   </li>
 
