--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@ I still closely collaborate with some former members of my group at Inria Paris:
     Kenji Maillard, and
     Bas Spitters.
     <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
-    In <a href="https://web.stevens.edu/csf2019/index.html">34th
-    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 256--271. June 2021.
+    In <a href="https://www.ieee-security.org/TC/CSF2021/">34th
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 608--622. June 2021.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove">Coq development</a>
@@ -575,7 +575,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
     To appear in <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
-    IEEE Computer Security Foundations Symposium (CSF)</a>, <!-- pages 256--271. --> June 2021.
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 1--14. June 2021.
     <ul style="font-size: small">
       <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
     </ul>
