--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
     <ul style="font-size: small">
       <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">presentation video</a> and
-          <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a><li>
+          <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a></li>
     </ul>
   </li>
 
