--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ could contribute:
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a> for <a href="https://eprint.iacr.org/2021/397">SSProve</a></b>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl21.sigplan.org/home/CPP-2021"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP (Steering Committee Chair since February 2021)</b>
   <ul>
   <li>Abstract deadline: 16 September 2021</li>
   <li>Submission deadline: 22 September 2021</li>
@@ -141,7 +141,7 @@ could contribute:
     in Bochum, Germany as a Tenured Faculty (W2).
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl22.sigplan.org/home/CPP-2022"><!-- International Conference on--> Certified Programs and Proofs, CPP</a> <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a> (PC &amp; Conference Co-Chair)</b>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/TC/CSF2020/">Computer Security Foundations, CSF 2020</a> and <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a></b> (PC member)
