--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ MPRI website</a>.</p>
 </p>
   <ul style="width:42em; text-align: left">
     <li style="margin-bottom: 1ex;">
-      <em>formal methods for computer and network security</em>:
+      <em>formal methods for computer security</em>:
       memory safety,
       compartmentalization,
       dynamic monitoring,
