--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ MPRI website</a>.</p>
     <li style="margin-bottom: 1ex;">
       <em>programming-languages techniques</em>:
       type systems,
-      verification,
+      program verification,
       proof assistants,
       property-based testing,
       semantics,
