--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
           <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
           <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>;
-          <a href="https://youtu.be/FdMRB1mnyUA">TYPES 2021 presentation</a>;
+          <a href="https://youtu.be/FdMRB1mnyUA">TYPES 2021 presentation</a>
       </li>
     </ul>
   </li>
