--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ I still closely collaborate with some former members of my group at Inria Paris:
     Jean-Philippe Bernardy, and
     C&#259;t&#259;lin Hri&#539;cu.
     <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
-    To appear in <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
+    In <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
     IEEE Computer Security Foundations Symposium (CSF)</a>, pages 1--14. June 2021.
     <ul style="font-size: small">
       <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
