--- a/index.html
+++ b/index.html
@@ -689,33 +689,33 @@ I still closely collaborate with some former members of my group at Inria Paris:
     </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">
-            Arthur Azevedo de Amorim,
-            C&#259;t&#259;lin Hri&#539;cu, and
-            Benjamin C. Pierce.<br/>
-    <b><a href="https://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>.
-            In <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, pages 79--105, April 2018.
-  <ul style="font-size: small">
-    <li>A previous draft was entitled
-        Alpha is for Address! The Essence of Memory Safety</li>
-    <li>Coq proofs available <a href="https://github.com/arthuraa/memory-safe-language">here</a> and <a href="https://github.com/micro-policies/micro-policies-coq/tree/master/memory_safety">here</a></li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--           Arthur Azevedo de Amorim, -->
+  <!--           C&#259;t&#259;lin Hri&#539;cu, and -->
+  <!--           Benjamin C. Pierce.<br/> -->
+  <!--   <b><a href="https://arxiv.org/abs/1705.07354">The Meaning of Memory Safety</a></b>. -->
+  <!--           In <a href="https://www.etaps.org/index.php/2018/post">7th International Conference on Principles of Security and Trust (POST)</a>, pages 79--105, April 2018. -->
+  <!-- <ul style="font-size: small"> -->
+  <!--   <li>A previous draft was entitled -->
+  <!--       Alpha is for Address! The Essence of Memory Safety</li> -->
+  <!--   <li>Coq proofs available <a href="https://github.com/arthuraa/memory-safe-language">here</a> and <a href="https://github.com/micro-policies/micro-policies-coq/tree/master/memory_safety">here</a></li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
-  <li style="margin-bottom: 1ex;">
-            Danel Ahman,
-            Cédric Fournet,
-            C&#259;t&#259;lin Hri&#539;cu,
-            Kenji Maillard,
-            Aseem Rastogi, and
-            Nikhil Swamy.
-    <b><a href="https://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
-            PACMPL, 2(POPL):65:1-65:30, January 2018.
-  <ul style="font-size: small">
-    <li><a href="https://fstar-lang.org/papers/monotonicity/">Online appendices and software artifacts</a></li>
-  </ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--           Danel Ahman, -->
+  <!--           Cédric Fournet, -->
+  <!--           C&#259;t&#259;lin Hri&#539;cu, -->
+  <!--           Kenji Maillard, -->
+  <!--           Aseem Rastogi, and -->
+  <!--           Nikhil Swamy. -->
+  <!--   <b><a href="https://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>. -->
+  <!--           In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>, -->
+  <!--           PACMPL, 2(POPL):65:1-65:30, January 2018. -->
+  <!-- <ul style="font-size: small"> -->
+  <!--   <li><a href="https://fstar-lang.org/papers/monotonicity/">Online appendices and software artifacts</a></li> -->
+  <!-- </ul> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"> -->
   <!--   Niklas Grimm, -->
