--- a/publications.html
+++ b/publications.html
@@ -26,6 +26,41 @@
 <ol start="1" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Carmine Abate, 
+    Philipp G. Haselwarter, 
+    Exequiel Rivas, 
+    Antoine Van Muylder, 
+    Théo Winterhalter, 
+    C&#259;t&#259;lin Hri&#539;cu,
+    Kenji Maillard, and
+    Bas Spitters.
+    <b><a href="https://eprint.iacr.org/2021/397">SSProve: A Foundational Framework for Modular Cryptographic Proofs in Coq</a></b>.
+    In <a href="https://www.ieee-security.org/TC/CSF2021/">34th
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 608--622. June 2021.
+    <b>Distinguished Paper Award</b>.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
+      <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
+          <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
+          <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
+          <a href="https://youtu.be/FdMRB1mnyUA">TYPES 2021 presentation</a>
+      </li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
+    Maximilian Algehed,
+    Jean-Philippe Bernardy, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
+    In <a href="https://www.ieee-security.org/TC/CSF2021/">34nd
+    IEEE Computer Security Foundations Symposium (CSF)</a>, pages 1--14. June 2021.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Carmine Abate,
     Roberto Blanco,
     Ștefan Ciobâcă,
@@ -403,7 +438,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol start="29" style="width:42em; text-align: left">
+<ol start="31" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu,
     Leonidas Lampropoulos,
@@ -463,22 +498,22 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 <h3>Books</h3>
-<ol start="34" style="width:42em; text-align: left">
+<ol start="36" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
 
 <h3>Book Chapter</h3>
-<ol start="36" style="width:42em; text-align: left">
+<ol start="38" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
    Leonidas Lampropoulos, Diane Gallois-Wong, C&#259;t&#259;lin
    Hri&#539;cu, John Hughes, Benjamin C. Pierce, and Li-yao Xia.
-   <b>Luck: A Probabilistic Language for Testing</b>. To appear in
-   Foundations of Probabilistic Programming.</li>
+   <b><a href="https://doi.org/10.1017/9781108770750.014">Luck: A Probabilistic Language for Testing</a></b>.
+   Foundations of Probabilistic Programming, pages 449-488.  Cambridge University Press. November 2020.</li>
 </ol>
 
 <h3>Editor</h3>
-<ol start="37" style="width:42em; text-align: left">
+<ol start="39" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
   Amal Ahmed, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Frank Piessens.<br/>
   <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
