--- a/publications.html
+++ b/publications.html
@@ -515,15 +515,21 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <h3>Editor</h3>
 <ol start="39" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
-  Amal Ahmed, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Frank Piessens.<br/>
-  <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
-  (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
+  C&#259;t&#259;lin Hri&#539;cu and Andrei Popescu,
+  editors. <b><a href="https://doi.org/10.1145/3437992">Proceedings of the 10th
+  ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP
+  2021</a></b>, Virtual Event, Denmark, January 17-19, 2021. ACM 2021</li>
 
   <li style="margin-bottom: 1ex;">
   Jasmin Blanchette and C&#259;t&#259;lin Hri&#539;cu,
   editors. <b><a href="http://dx.doi.org/10.1145/3372885">Proceedings of the 9th
   ACM SIGPLAN International Conference on Certified Programs and Proofs, CPP
   2020</a></b>, New Orleans, LA, USA, January 20-21, 2020. ACM, 2020.</li>
+
+  <li style="margin-bottom: 1ex;">
+  Amal Ahmed, Deepak Garg, C&#259;t&#259;lin Hri&#539;cu, Frank Piessens.<br/>
+  <b><a href="https://doi.org/10.4230/DagRep.8.5.1">Secure Compilation
+  (Dagstuhl Seminar 18201)</a></b>. Dagstuhl Reports 8(5): 1-30 (2018)</li>
 
 </ol>
 
@@ -550,7 +556,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <!-- </ol> -->
 
 <h3>Theses</h3>
-<ol start="39" style="width:42em; text-align: left">
+<ol start="42" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://prosecco.gforge.inria.fr/personal/hritcu/publications/catalin_habil.pdf">The Quest for Formally Secure Compartmentalizing Compilation</a></b>.<br/>Habilitation Thesis, ENS Paris, To be defended on 29 January 2019.
   <ul style="font-size: small">
@@ -599,7 +605,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 -->
 
 <h3>Patent</h3>
-<ol start="42" style="width:42em; text-align: left">
+<ol start="45" style="width:42em; text-align: left">
   <li style="margin-bottom: 1ex;">
     André DeHon, Eli Boling, and C&#259;t&#259;lin Hri&#539;cu.
     <a href="https://patents.google.com/patent/US20170177368A1/en">Techniques for metadata processing</a>, US20170177368A1,
@@ -608,23 +614,12 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<h3>Recent Drafts</h3>
-<ol start="43" style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;">
-    Maximilian Algehed,
-    Jean-Philippe Bernardy, and
-    C&#259;t&#259;lin Hri&#539;cu.<br/>
-    <b><a href="https://arxiv.org/abs/2005.04722">Dynamic IFC Theorems for Free!</a></b>
-    arXiv:2005.04722. May 2020.
-    <ul style="font-size: small">
-      <li><a href="https://github.com/MaximilianAlgehed/DynamicIFCTheoremsForFree">Agda development</a>
-    </ul>
-  </li>
-
-</ol>
+<!-- <h3>Recent Drafts</h3> -->
+<!-- <ol start="46" style="width:42em; text-align: left"> -->
+<!-- </ol> -->
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="44" style="width:42em; text-align: left">
+<ol start="47" style="width:42em; text-align: left">
 
 
   <!-- <li style="margin-bottom: 1ex;"> -->
