--- a/publications.html
+++ b/publications.html
@@ -185,7 +185,7 @@
             Aseem Rastogi, and
             Nikhil Swamy.
     <b><a href="http://arxiv.org/abs/1707.02466">Recalling a Witness: Foundations and Applications of Monotonic State</a></b>.
-            In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages (POPL)</a>,
+            In <a href="https://popl18.sigplan.org">45th ACM SIGPLAN Symposium on Principles of Programming Languages</a>,
             PACMPL, 2(POPL):65:1-65:30, January 2018.
   <ul style="font-size: small">
     <li><a href="https://fstar-lang.org/papers/monotonicity/">Online appendices and software artifacts</a></li>
