--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<div><img alt="Catalin Hritcu's Photo" id="photo" src="images/catalin_hritcu_2012.jpg" title="Catalin Hritcu" /></div>
+<div><img alt="Catalin Hritcu's Photo" id="photo" src="images/catalin_hritcu_2016.jpg" title="Catalin Hritcu" /></div>
 
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
@@ -548,6 +548,20 @@ I still closely collaborate with some former members of my group at Inria Paris:
 <p>For a complete list of my papers please look <a href="publications.html">here</a><!--<br/>-->
 (also on <a href="http://www.informatik.uni-trier.de/~ley/pers/hy/h/Hritcu:Catalin.html">DBLP</a> and <a href="http://scholar.google.com/citations?user=d-3XtW8AAAAJ">Google Scholar</a><!--, <a href="http://academic.research.microsoft.com/Author/3586469">MS Academic Search</a>, and <a href="http://www.ad-astra.ro/whoswho/view_profile.php?user_id=1843&lang=en">AdAstra.ro</a>-->).</p>
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Akram El-Korashy,
+    Roberto Blanco,
+    Jérémy Thibault,
+    Adrien Durier,
+    Deepak Garg, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
+    arXiv:2110.01439. October 2021.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad/tree/memory-sharing">Coq development</a></li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;">
     Carmine Abate, 
