--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<div><img alt="Catalin Hritcu's Photo" id="photo" src="images/catalin_hritcu_2016.jpg" title="Catalin Hritcu" /></div>
+<div><img alt="Catalin Hritcu's Photo" id="photo" src="images/catalin_hritcu_2016.jpg" style="width:42em; title="Catalin Hritcu" /></div>
 
 <h1>C&#259;t&#259;lin Hri&#539;cu</h1>
 
