--- a/index.html
+++ b/index.html
@@ -512,6 +512,8 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a> (PhD Student, MPI-SP)</li>
 
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (PhD Student, MPI-SP)</li>
+
   <li style="margin-bottom: 1ex;"><a href="http://perso.eleves.ens-rennes.fr/people/Jeremy.Thibault/">Jérémy Thibault</a> (PhD Student, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://robblanco.github.io/">Roberto Blanco</a> (Postdoctoral Researcher, MPI-SP)</li>
@@ -520,8 +522,6 @@ I am very fortunate to work with a group of outstanding students and starting re
 <!-- http://perso.ens-lyon.fr/adrien.durier -->
 
   <li style="margin-bottom: 1ex;"><a href="https://theowinterhalter.github.io/">Théo Winterhalter</a> (Postdoctoral Researcher, MPI-SP)</li>
-
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/cezar-andrici-49771663/">Cezar Constantin Andrici</a> (Research Engineer / Intern, MPI-SP)</li>
 
   <li style="margin-bottom: 1ex;"><a href="https://mtzguido.github.io">Guido Martínez</a> (Co-Supervised PhD Student, CIFASIS-CONICET Rosario)</li>
 
