--- a/publications.html
+++ b/publications.html
@@ -614,12 +614,27 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 </ol>
 
 
-<!-- <h3>Recent Drafts</h3> -->
-<!-- <ol start="46" style="width:42em; text-align: left"> -->
-<!-- </ol> -->
+<h3>Recent Drafts</h3>
+<ol start="46" style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;">
+    Akram El-Korashy,
+    Roberto Blanco,
+    Jérémy Thibault,
+    Adrien Durier,
+    Deepak Garg, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://arxiv.org/abs/2110.01439">SecurePtrs: Proving Secure Compilation with Data-Flow Back-Translation and Turn-Taking Simulation</a></b>.
+    arXiv:2110.01439. October 2021.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad/tree/memory-sharing">Coq development</a></li>
+    </ul>
+  </li>
+
+</ol>
 
 <h3>Informal Publications and Workshops</h3>
-<ol start="46" style="width:42em; text-align: left">
+<ol start="47" style="width:42em; text-align: left">
 
 
   <!-- <li style="margin-bottom: 1ex;"> -->
