--- a/publications.html
+++ b/publications.html
@@ -413,7 +413,11 @@
   </li>
 
   <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#539;cu, David Langworthy. <a href="publications/dminor-icfp2010.pdf">Semantic Subtyping with an SMT Solver</a>, In <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010.
+  <ul style="font-size: small">
+    <li>Superseded by journal paper with the same name, see below.</li>
+  </ul>
   </li>
+
   <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <a href="publications/zk-compromise-csf2009.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a>. In <a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>, pages 308-323, IEEE Computer Society Press, July 2009.
   <ul style="font-size: small">
     <li><a href="publications/zk-compromise-full.pdf">Full version</a> that contains all the technical details, March 2009.</li>
