--- a/publications.html
+++ b/publications.html
@@ -414,7 +414,7 @@
 
   <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#539;cu, David Langworthy. <a href="publications/dminor-icfp2010.pdf">Semantic Subtyping with an SMT Solver</a>, In <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010.
   <ul style="font-size: small">
-    <li>Superseded by journal paper with the same name, see below.</li>
+    <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
   </ul>
   </li>
 
@@ -442,7 +442,7 @@
 
 <h3>Journal Papers</h3>
 
-<ol start="31" style="width:42em; text-align: left">
+<ol id="journal" start="31" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu,
     Leonidas Lampropoulos,
