--- a/publications.html
+++ b/publications.html
@@ -365,6 +365,9 @@
     Benjamin C. Pierce,
     Randy Pollack, and
     Andrew Tolmach. <b><a href="http://www.crash-safe.org/node/29">A Verified Information-Flow Architecture</a></b>. In <a href="http://popl.mpi-sws.org/2014/">41st ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL)</a>, pages 165-178. ACM, January 2014.
+  <ul style="font-size: small">
+    <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
+  </ul>
 <!--
   <ul style="font-size: small">
     <li><a href="publications/verified-ifc-long-draft-2013-11-10.pdf">Long version</a></li>
@@ -379,6 +382,9 @@
     Dimitrios Vytiniotis,
     Arthur Azevedo de Amorim,
     Leonidas Lampropoulos. <b><a href="publications/testing-noninterference-icfp2013.pdf">Testing Noninterference, Quickly</a></b>. In <a href="http://icfpconference.org/icfp2013/">18th ACM SIGPLAN International Conference on Functional Programming (ICFP)</a>. pages 455-468, ACM Press. September 2013.
+  <ul style="font-size: small">
+    <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
+  </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu, Michael Greenberg, Ben Karel, Benjamin C. Pierce, Greg Morrisett. <b><a href="publications/all-your-ifcexception-oakland2013-full.pdf">All Your IFCException Are Belong To Us</a></b>. In <a href="http://www.ieee-security.org/TC/SP2013/">34th IEEE Symposium on Security and Privacy (Oakland)</a>, pages 3-17, IEEE Computer Society Press, May 2013.
@@ -405,11 +411,12 @@
 
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Union and Intersection Types for Secure Protocol Implementations</a></b>. In <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.
   <ul style="font-size: small">
+    <li>Superseded by journal paper entitled "Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations", see <a href="#journal">below</a>.</li>
 <!--    <li><a href="publications/rcf-and-or-coq-full.pdf">Full version</a> that contains additional technical details, February 2011.</li>-->
-    <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li>
-    <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li>
-    <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li>
-  </ul>
+    <!-- <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li> -->
+  <!--   <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li> -->
+  <!--   <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li> -->
+  <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#539;cu, David Langworthy. <a href="publications/dminor-icfp2010.pdf">Semantic Subtyping with an SMT Solver</a>, In <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010.
