--- a/publications.html
+++ b/publications.html
@@ -419,13 +419,13 @@
   <!-- </ul> -->
   </li>
 
-  <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#539;cu, David Langworthy. <a href="publications/dminor-icfp2010.pdf">Semantic Subtyping with an SMT Solver</a>, In <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a>, September 2010.
+  <li style="margin-bottom: 1ex;">Gavin M. Bierman, Andrew D. Gordon, C&#259;t&#259;lin Hri&#539;cu, David Langworthy. <b><a href="publications/dminor-icfp2010.pdf">Semantic Subtyping with an SMT Solver</a>, In <a href="http://www.icfpconference.org/icfp2010/">15th ACM SIGPLAN International Conference on Functional Programming (ICFP 2010)</a></b>, September 2010.
   <ul style="font-size: small">
     <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <a href="publications/zk-compromise-csf2009.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a>. In <a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>, pages 308-323, IEEE Computer Society Press, July 2009.
+  <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-compromise-csf2009.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a></b>. In <a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>, pages 308-323, IEEE Computer Society Press, July 2009.
   <ul style="font-size: small">
     <li><a href="publications/zk-compromise-full.pdf">Full version</a> that contains all the technical details, March 2009.</li>
     <li>Prototype of the <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise/">protocol transformation</a> by Martin Grochulla, March 2009.</li>
@@ -433,7 +433,7 @@
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <a href="publications/zk-types-ccs2008.pdf">Type-checking Zero-knowledge</a>. In <a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a>, pages 357-370, ACM Press, October 2008.
+  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-types-ccs2008.pdf">Type-checking Zero-knowledge</a>. In <a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a></b>, pages 357-370, ACM Press, October 2008.
   <ul style="font-size: small">
     <li><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker/">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, May 2011.</li>
     <li><a href="publications/zk-types-full.pdf">Full version</a> that additionally contains all the technical details of the type system, a brief discussion about security despite compromise, and all the proofs, November 2008.</li>
@@ -442,7 +442,7 @@
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <a href="publications/ev-applied-csf-final.pdf">Automated Verification of Remote Electronic Voting Protocols in the Applied Pi-calculus</a>. In <a href="http://www.cylab.cmu.edu/CSF2008/">21th IEEE Symposium on Computer Security Foundations (CSF 2008)</a>, pages 195-209, IEEE Computer Society Press, June 2008.</li>
+  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/ev-applied-csf-final.pdf">Automated Verification of Remote Electronic Voting Protocols in the Applied Pi-calculus</a></b>. In <a href="http://www.cylab.cmu.edu/CSF2008/">21th IEEE Symposium on Computer Security Foundations (CSF 2008)</a>, pages 195-209, IEEE Computer Society Press, June 2008.</li>
 
   <!-- <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu, Sabin Buraga. <a href="http://hritcu.wordpress.com/publications/adf-paper/">A Reference Implementation of ADF (Agent Developing Framework): Semantic Web-Based Agent Communication</a>. Seventh International Symposium on Symbolic and Numeric Algorithms for Scientific Computing (SYNASC'05), pages 199-206, IEEE Computer Society Press, September 2005.</li> -->
 </ol>
