--- a/publications.html
+++ b/publications.html
@@ -433,7 +433,7 @@
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-types-ccs2008.pdf">Type-checking Zero-knowledge</a>. In <a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a></b>, pages 357-370, ACM Press, October 2008.
+  <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-types-ccs2008.pdf">Type-checking Zero-knowledge</a></b>. In <a href="http://www.sigsac.org/ccs/CCS2008/">15th ACM Conference on Computer and Communications Security (CCS 2008)</a>, pages 357-370, ACM Press, October 2008.
   <ul style="font-size: small">
     <li><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker/">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, May 2011.</li>
     <li><a href="publications/zk-types-full.pdf">Full version</a> that additionally contains all the technical details of the type system, a brief discussion about security despite compromise, and all the proofs, November 2008.</li>
