--- a/publications.html
+++ b/publications.html
@@ -398,13 +398,13 @@
   <li style="margin-bottom: 1ex;">Michael Backes, Alex Busenius, C&#259;t&#259;lin Hri&#539;cu. <b><a href="publications/expi2java-nfm2012.pdf">On the Development and Formalization of an Extensible Code Generator for Real Life Security Protocols</a></b>. <a href="http://shemesh.larc.nasa.gov/nfm2012/">4th NASA Formal Methods Symposium (NFM 2012)</a>, pages 371-387, April 2012.
   <ul style="font-size: small">
     <li><a href="publications/expi2java-full.pdf">Online appendix</a> containing details that had to be omitted in the NFM paper due to the lack of space.</li>
-    <li>Implementation, case studies, documentation, Coq formalization, and proofs are all available on the page of the <a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">expi2java project</a>.</li>
+    <li>Implementation, case studies, documentation, Coq formalization, and proofs are all available on the page of the <a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">expi2java project</a>.</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Thorsten Tarrach. <a href="publications/dverify-cpp2011.pdf">Automatically Verifying Typing Constraints for a Data Processing Language</a>. In <a href="http://formes.asia/cpp/">First International Conference on Certified Programs and Proofs (CPP 2011)</a>, pages 296-313, Springer, December 2011.
   <ul style="font-size: small">
-    <li>Implementation, full Coq proofs and additional details available on the page of the <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li>
+    <li>Implementation, full Coq proofs and additional details available on the page of the <a href="https://web.archive.org/web/20150602074713/http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li>
     <li><a href="publications/dverify-boogie-2011.pdf">Preliminary version</a> presented at the <a href="http://research.microsoft.com/en-us/um/people/moskal/boogie2011/">BOOGIE 2011 workshop</a>, July 2011.</li>
   </ul>
   </li>
@@ -413,8 +413,8 @@
   <ul style="font-size: small">
     <li>Superseded by journal paper entitled "Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations", see <a href="#journal">below</a>.</li>
 <!--    <li><a href="publications/rcf-and-or-coq-full.pdf">Full version</a> that contains additional technical details, February 2011.</li>-->
-    <!-- <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li> -->
-  <!--   <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li> -->
+    <!-- <li><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li> -->
+  <!--   <li><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li> -->
   <!--   <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li> -->
   </ul>
   </li>
@@ -428,7 +428,7 @@
   <li style="margin-bottom: 1ex;">Michael Backes, Martin Grochulla, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/zk-compromise-csf2009.pdf">Achieving Security Despite Compromise Using Zero-knowledge</a></b>. In <a href="http://www.cs.sunysb.edu/csf09/">22th IEEE Symposium on Computer Security Foundations (CSF 2009)</a>, pages 308-323, IEEE Computer Society Press, July 2009.
   <ul style="font-size: small">
     <li><a href="publications/zk-compromise-full.pdf">Full version</a> that contains all the technical details, March 2009.</li>
-    <li>Prototype of the <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise/">protocol transformation</a> by Martin Grochulla, March 2009.</li>
+    <li>Prototype of the <a href="https://web.archive.org/web/20141221070853/http://www.infsec.cs.uni-saarland.de/projects/zk-compromise/">protocol transformation</a> by Martin Grochulla, March 2009.</li>
     <li>A <a href="publications/zk-compromise-wits.pdf">preliminary version</a> of this paper was presented at <a href="http://www.avantssar.eu/arspa-wits09/">ARSPA-WITS'09</a>, March 2009.</li>
   </ul>
   </li>
@@ -485,8 +485,8 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Matteo Maffei. <b><a href="publications/rcf-and-or-coq-jcs2014.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Secure Protocol Implementations</a></b>, <a href="http://www.iospress.nl/journal/journal-of-computer-security/">Journal of Computer Security (JCS)</a>; <a href="http://iospress.metapress.com/content/k28485h0t643/?p=f499e1ab872f49ddb4350156a27584e9&amp;pi=0"> Special Issue on Foundational Aspects of Security</a>, 22(2):301-353, February, 2014.
   <ul style="font-size: small">
     <li><a href="publications/rcf-and-or-coq-tosca2011-post.pdf">Preliminary version</a> appeared in <a href="http://www.avantssar.eu/arspa-wits11/">Theory of Security and Applications (TOSCA'11)</a>, Invited paper, April 2011.</li>
-    <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li>
-    <li><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li>
+    <li><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5wiki/WikiStart#Formalization">Machine-checked soundness proof in Coq</a> by C&#259;t&#259;lin Hri&#539;cu, February 2011.</li>
+    <li><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">Prototype implementation (F5)</a> by Thorsten Tarrach and C&#259;t&#259;lin Hri&#539;cu, November 2010.</li>
 <!--    <li>A <a href="publications/zk-rcf-fcs2009.pdf">very preliminary version</a> of this work was presented at <a href="http://www.loria.fr/~cortier/FCS09/">FCS'09</a>, August 2009.</li>-->
   </ul>
   </li>
@@ -550,7 +550,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <!--   <li style="margin-bottom: 1ex;">Michael Backes, C&#259;t&#259;lin Hri&#539;cu, and Thorsten Tarrach. <a href="publications/dverify-boogie-2011.pdf">Automatically Verifying Typing Constraints for a Data Processing Language</a>. <a href="http://research.microsoft.com/en-us/um/people/moskal/boogie2011/">First International Workshop On Intermediate Verification Languages (BOOGIE 2011)</a>, July 2011. -->
 <!--   <ul style="font-size: small"> -->
-<!--     <li>Implementation, Coq proofs and additional details available on the page of the <a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li> -->
+<!--     <li>Implementation, Coq proofs and additional details available on the page of the <a href="https://web.archive.org/web/20150602074713/http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify project</a>.</li> -->
 <!--   </ul> -->
 <!--   </li> -->
 
@@ -582,7 +582,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="http://scidok.sulb.uni-saarland.de/volltexte/2012/4800/pdf/catalin_phd_2012_03_24_final.pdf">Union, Intersection, and Refinement Types and Reasoning About Type Disjointness for Security Protocol Analysis</a></b>. PhD Thesis, <!--Advisors: Michael Backes, Matteo Maffei, and Andrew D. Gordon (MSR)--> Saarland University, <!--Saarbr&uuml;cken. Submitted: 14 November 2011. Defended: 10 January 2012. Published: 29 March 2012--> Jan 2012.
   <ul style="font-size: small">
-    <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">the F5 Toolchain for RCF</a>.</li>
+    <li>Coq formalizations, implementations, samples, and further details available on the pages of <a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">the Zero-knowledge Type-checker</a> and of <a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">the F5 Toolchain for RCF</a>.</li>
     </ul>
     </li>
   <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <a href="http://hritcu.wordpress.com/publications/masters-thesis/">Step-indexed Semantic Model of Types for the Functional Object Calculus</a>. Master's Thesis, Saarland University, Saarbr&uuml;cken, Germany, May 2007.
