--- a/software.html
+++ b/software.html
@@ -59,11 +59,11 @@
   Michael Greenberg, Ben Karel,  Benoît Montagu,
   Greg Morrisett, Benjamin C. Pierce, Jesse A. Tov, and others)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/F5/">F5: a tool-chain for RCF</a> (with Thorsten Tarrach)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> (by Thorsten Tarrach)</li>
-  <li style="margin-bottom: 1ex;"><a href="https://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> (with Gavin Bierman and Andy Gordon)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> (by Alex Busenius)</li>
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> (by Martin Grochulla)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20160831071710/http://www.infsec.cs.uni-saarland.de/projects/F5">F5: a tool-chain for RCF</a> (with Thorsten Tarrach)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20150602074713/http://www.infsec.cs.uni-saarland.de/projects/dverify">DVerify: a verification tool for the "M" language</a> (by Thorsten Tarrach)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20130512113605/http://research.microsoft.com/en-us/projects/dminor/">Dminor: a type-checker using semantic subtyping</a> (with Gavin Bierman and Andy Gordon)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> (by Alex Busenius)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20141221070853/http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> (by Martin Grochulla)</li>
 <!--  <li style="margin-bottom: 1ex;"><a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F#: a prototype code generator for security protocols</a> by Thorsten Tarrach</li>-->
   <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Zero-knowledge type-checker</a> (with Stefan Lorenz, Kim Pecina and Thorsten Tarrach)</li>
 </ul>
