--- a/software.html
+++ b/software.html
@@ -47,13 +47,13 @@
        Antal Spector-Zabusky, and Andrew Tolmach)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="http://www.crash-safe.org">CRASH/SAFE</a>:
+    <a href="https://web.archive.org/web/20190906203845/http://www.crash-safe.org/">CRASH/SAFE</a>:
       clean-slate co-design of a secure
       architecture, including novel hardware, operating
       system, and programming language (~40 people team)</li>
 
   <li style="margin-bottom: 1ex;">
-    <a href="http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
+    <a href="https://web.archive.org/web/20150914220632/http://prosecco.gforge.inria.fr/personal/hritcu/temp/breeze-interpreter-snapshot-2015-06-27.zip">Breeze: 
   a programming language with dynamic information flow control 
   and label-based access control</a> (with
   Michael Greenberg, Ben Karel,  Benoît Montagu,
@@ -65,7 +65,7 @@
   <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20150601090128/http://www.infsec.cs.uni-saarland.de/projects/expi2java">Expi2Java: an extensible code generator for security protocols</a> (by Alex Busenius)</li>
   <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20141221070853/http://www.infsec.cs.uni-saarland.de/projects/zk-compromise">Protocol transformation for achieving security despite compromise</a> (by Martin Grochulla)</li>
 <!--  <li style="margin-bottom: 1ex;"><a href="http://mail-infsec.cs.uni-saarland.de:8000/projects/spi2fs/">Spi2F#: a prototype code generator for security protocols</a> by Thorsten Tarrach</li>-->
-  <li style="margin-bottom: 1ex;"><a href="http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker">Zero-knowledge type-checker</a> (with Stefan Lorenz, Kim Pecina and Thorsten Tarrach)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://web.archive.org/web/20150927053746/http://www.infsec.cs.uni-saarland.de/projects/zk-typechecker/">Zero-knowledge type-checker</a> (with Stefan Lorenz, Kim Pecina and Thorsten Tarrach)</li>
 </ul>
 
 <!-- Google analytics code -->
